css fudges to fix embarassing wrap bug

--- a/syweb/webclient/app/app.css
+++ b/syweb/webclient/app/app.css
@@ -452,20 +452,25 @@ textarea, input {
 }
 
 .roomNameSection, .roomTopicSection {
+/*
     text-align: right;
     float: right;
     width: 100%;
+*/    
 }
 
 .roomNameSetNew, .roomTopicSetNew {
     float: right;
 }
 
+#roomHeaderLogo {
+    float: left;
+}
+
 .roomHeaderInfo {
     text-align: right;
-    float: right;
     margin-top: 0px;
-    margin-right: 30px;
+    margin-right: 145px;
 }
 
 /*** Room Info Dialog ***/
